--- a/static/templates/index.html
+++ b/static/templates/index.html
@@ -15,7 +15,9 @@
     .leaflet-container {  /* all maps */
         width:  800px;
         height: 800px;
-        
+        margin-left:auto;
+        margin-right: 50px;
+        margin-top: 20px;
     }
 </style>
 <script type="text/javascript">
@@ -27,6 +29,11 @@
         L.polyline({{ v }}).addTo(map) ;
         {% endfor %}
     }
+</script>
+
+<script type="text/javascript">
+f
+
 </script>
 
 
