Modifs sur index.html
Modifs sur index.html

--- a/static/templates/index.html
+++ b/static/templates/index.html
@@ -10,16 +10,7 @@
     {% leaflet_css %}
 </head>
 
-<style>
 
-    .leaflet-container {  /* all maps */
-        width:  800px;
-        height: 800px;
-        margin-left:auto;
-        margin-right: 50px;
-        margin-top: 20px;
-    }
-</style>
 <script type="text/javascript">
     function map_init_basic (map, options) {
         {% for k,v in poi_departs.iteritems %}
@@ -33,6 +24,41 @@
 
 <body>
     {% leaflet_map "yourmap" callback="window.map_init_basic"%}
+
+      <div class="row">
+          <div class="col-md-6">
+
+
+          </div>
+      <div class="col-md-6"></div>
+        </div>
+
+        <div class="col-md-4 text-center">
+           <div class='form-group'>
+                  <div class="input-group margin-bottom-sm">
+                              <span class="input-group-addon"><i class="fa fa-map-marker fa"></i></span>
+                                      <input type='text' class='form-control' name='Adresse Départ' placeholder='Adresse départ' />
+                    </div>
+            </div>
+
+        </div>
+    <div class="col-md-4">
+              <div class='form-group'>
+                  <div class="input-group margin-bottom-sm">
+                              <span class="input-group-addon"><i class="fa fa-map-marker fa"></i></span>
+                                      <input type='text' class='form-control' name='Adresse arrivée' placeholder='Adresse arrivée' />
+                                            </div>
+        </div>
+    </div>
+
+    <div class="btn-group">
+  <a class="btn btn-default" href="#"><i class="fa fa-car"></i></a>
+  <a class="btn btn-default" href="#"><i class="fa fa-bus"></i></a>
+  <a class="btn btn-default" href="#"><i class="fa fa-bicycle"></i></a>
+  <a class="btn btn-default" href="#"><i class="fa fa-male"></i></a>  
+</div>
+
 </body>
+
 
 {% endblock %}
