--- a/static/templates/registration/activation_complete.html
+++ b/static/templates/registration/activation_complete.html
@@ -4,3 +4,8 @@
 {% block content %}
 <p class='lead'>{% trans "Merci d'avoir rejoint HurryUp!" %}</p>
 {% endblock %}
+
+<script type="text/javascript">
+var notification = alertify.notify('Vous êtes inscrit', 'success', 5, function(){  console.log('dismissed'); });
+    
+</script>
