--- a/static/templates/base.html
+++ b/static/templates/base.html
@@ -51,6 +51,9 @@
 
 {% block index %}
 {% endblock %}
+      
+{% block geodjango %}
+{% endblock %}
 
     <div class="container">
         {% if messages %}
