--- a/static/templates/index.html
+++ b/static/templates/index.html
@@ -5,26 +5,30 @@
 
 {% block index %}
 
-<head>
-    {% leaflet_js %}
-    {% leaflet_css %}
-</head>
 
-
-<script type="text/javascript">
-    function map_init_basic (map, options) {
-        {% for k,v in poi_departs.iteritems %}
-        L.marker({{ v }}).addTo(map) ;
-        {% endfor %}
-        {% for k,v in lines.iteritems %}
-        L.polyline({{ v }}).addTo(map) ;
-        {% endfor %}
-    }
+    <style type="text/css">
+      html, body, #map-canvas { height: 100%; margin: 0; padding: 0;}
+    </style>
+    <script type="text/javascript"
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAr_jYICO2Yq018K6BIJZ39ZTEdi7klGZg">
+    </script>
+    <script type="text/javascript">
+      function initialize() {
+        var mapOptions = {
+          center: { lat: -34.397, lng: 150.644},
+          zoom: 8
+        };
+        var map = new google.maps.Map(document.getElementById('map-canvas'),
+            mapOptions);
+      }
+      google.maps.event.addDomListener(window, 'load', initialize);
+    </script>
 </script>
 
-<body>
-    {% leaflet_map "yourmap" callback="window.map_init_basic"%}
 
+<body>
+
+<div id="map-canvas"></div>
       <div class="row">
           <div class="col-md-6">
 
