--- a/static/templates/geodjango.html
+++ b/static/templates/geodjango.html
@@ -8,61 +8,31 @@
   <head>
 
     <style type="text/css">
-      html, body, #map-canvas
-        {
-            height: 120%;
+      html, body, #map-canvas 
+        { 
+            height: 100%;
             width: 100%;
-            margin-left: auto;
+            margin-left: auto; 
             margin-top: auto;
         }
     </style>
-
-    <style type="text/css">
-
-
-      </style>
     <script type="text/javascript"
-      src="https://maps.googleapis.com/maps/api/js?region=FRA?language=fr?libraries=places?key=AIzaSyAr_jYICO2Yq018K6BIJZ39ZTEdi7klGZg">
+      src="https://maps.googleapis.com/maps/api/js?region=GB?language=ja?key=AIzaSyAr_jYICO2Yq018K6BIJZ39ZTEdi7klGZg">
     </script>
-
-
     <script type="text/javascript">
       function initialize() {
         var mapOptions = {
-          center: { lat: 48.856614, lng: 2.352222},
-          zoom: 15
+          center: { lat: -34.397, lng: 150.644},
+          zoom: 8
         };
         var map = new google.maps.Map(document.getElementById('map-canvas'),
             mapOptions);
-
-
-        // gestion du traffic routier
-        var trafficLayer = new google.maps.TrafficLayer();
-        trafficLayer.setMap(map);
-
-        // gestion des transports en commun
-        var transitLayer = new google.maps.TransitLayer(); transitLayer.setMap(map);
-        transitLayer.setMap(map);
-
-        // météo
-        var weatherLayer = new google.maps.weather.WeatherLayer({
-        temperatureUnits: google.maps.weather.TemperatureUnit.CELSIUS
-        });
-        weatherLayer.setMap(map);
-
-        // nuages
-        var cloudLayer = new google.maps.weather.CloudLayer();
-        cloudLayer.setMap(map);
-
       }
       google.maps.event.addDomListener(window, 'load', initialize);
     </script>
-
-
-
   </head>
   <body>
-<div id="map-canvas" style="width: 100%; height: 30%"></div>
+<div id="map-canvas" style="width: 100%; height: 40%"></div>
   </body>
 {% endblock %}
 
@@ -78,7 +48,8 @@
         <button class="btn btn-lg btn-primary btn-block" type="submit">Rechercher</button>
       </form>
     </div>
-  <div class="col-md-8 text-center">
-    <h2 class="form-signin-heading">Informations complémentaires</h2>
-  </div>
+<div class="col-md-8 text-center">
+        <h2 class="text">Informations complémentaires</h2>
+</div>
+    
 {% endblock %}
