--- a/static/templates/base.html
+++ b/static/templates/base.html
@@ -55,6 +55,8 @@
 {% block geodjango %}
 {% endblock %}
 
+{% block trajets %}
+{% endblock %}
     <div class="container">
         {% if messages %}
         <div class='row'>
