--- a/static/templates/geodjango.html
+++ b/static/templates/geodjango.html
@@ -2,11 +2,11 @@
 {% load crispy_forms_tags %}
 
 
-{% block index %}
+
 
 <html>
   <head>
-
+{% block index %}
     <style type="text/css">
       html, body, #map-canvas 
         { 
@@ -16,8 +16,24 @@
             margin-top: auto;
         }
     </style>
-    <script type="text/javascript"
-      src="https://maps.googleapis.com/maps/api/js?region=GB?language=ja?key=AIzaSyAr_jYICO2Yq018K6BIJZ39ZTEdi7klGZg">
+        <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&signed_in=true&libraries=places"></script>
+    <script>
+// This example displays an address form, using the autocomplete feature
+// of the Google Places API to help users fill in the information.
+
+function initialize() {
+  // Create the autocomplete object, restricting the search
+  // to geographical location types.
+  autocomplete = new google.maps.places.Autocomplete(
+      /** @type {HTMLInputElement} */(document.getElementById('autocomplete')),
+      { types: ['geocode'] });
+  // When the user selects an address from the dropdown,
+  // populate the address fields in the form.
+  google.maps.event.addListener(autocomplete, 'place_changed', function() {
+    fillInAddress();
+  });
+}
+
     </script>
     <script type="text/javascript">
       function initialize() {
@@ -35,14 +51,19 @@
 <div id="map-canvas" style="width: 100%; height: 40%"></div>
   </body>
 {% endblock %}
-
+    
+  <body onload="initialize()">
+    <div id="locationField">
+      <input id="autocomplete" placeholder="Enter your address"
+             onFocus="geolocate()" type="text"></input>
+    </div>
 {% block geodjango %}
-    {{form|crispy}}
+ 
   <div class="col-md-4 text-center">
      <form class="form-signin">
         <h2 class="form-signin-heading">Recherchez votre itinéraire</h2>
         <label for="inputEmail" class="sr-only">Adresse départ</label>
-        <input type="word" id="word" class="form-control" placeholder="Départ" required>
+		<input type="word" id="word" class="form-control" placeholder="Départ" required>
         <label for="inputPassword" class="sr-only">Adresse arrivée</label>
         <input type="word" id="word" class="form-control" placeholder="Arrivée" required>
         <button class="btn btn-lg btn-primary btn-block" type="submit">Rechercher</button>
@@ -51,5 +72,6 @@
 <div class="col-md-8 text-center">
         <h2 class="text">Informations complémentaires</h2>
 </div>
-    
+
 {% endblock %}
+    </body>
