--- a/static/templates/index.html
+++ b/static/templates/index.html
@@ -1,68 +1,41 @@
-{% extends "base.html" %}
-
-{% load leaflet_tags %}
-
-
-{% block index %}
-
-
-    <style type="text/css">
-      html, body, #map-canvas { height: 100%; margin: 0; padding: 0;}
-    </style>
-    <script type="text/javascript"
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAr_jYICO2Yq018K6BIJZ39ZTEdi7klGZg">
-    </script>
-    <script type="text/javascript">
-      function initialize() {
-        var mapOptions = {
-          center: { lat: -34.397, lng: 150.644},
-          zoom: 8
-        };
-        var map = new google.maps.Map(document.getElementById('map-canvas'),
-            mapOptions);
-      }
-      google.maps.event.addDomListener(window, 'load', initialize);
-    </script>
-</script>
-
-
-<body>
-
-<div id="map-canvas"></div>
-      <div class="row">
-          <div class="col-md-6">
-
-
-          </div>
-      <div class="col-md-6"></div>
+<!DOCTYPE html> 
+<html>
+  <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <title>Calcul d'itinéraire Google Map Api v3</title>
+    <link rel="stylesheet" href="/static/css/jquery-ui-1.8.12.custom.css" type="text/css" /> 
+  </head>
+  <style type="text/css">
+    body{font-family:Arial;background:#000000;margin:0px;padding:0px;}
+    #container{position:relative;width:990px;margin:auto;background:#FFFFFF;padding:20px 0px 20px 0px;}
+    #container h1{margin:0px 0px 10px 20px;}
+    #container #map{width:700px;height:500px;margin:auto;}
+    #container #panel{width:700px;margin:auto;}
+    #container #destinationForm{margin:0px 0px 20px 0px;background:#EEEEEE;padding:10px 20px;border:solid 1px #C0C0C0;}
+    #container #destinationForm input[type=text]{border:solid 1px #C0C0C0;}
+  </style>
+  <body>
+    <div id="container">
+        <h1>Calcul d'itinéraire Google Maps Api V3</h1>
+        <div id="destinationForm">
+            <form action="" method="get" name="direction" id="direction">
+                <label>Point de départ :</label>
+                <input type="text" name="origin" id="origin">
+                <label>Destination :</label>
+                <input type="text" name="destination" id="destination">
+                <input type="button" value="Calculer l'itinéraire" onclick="javascript:calculate()">
+            </form>
         </div>
-
-        <div class="col-md-4 text-center">
-           <div class='form-group'>
-                  <div class="input-group margin-bottom-sm">
-                              <span class="input-group-addon"><i class="fa fa-map-marker fa"></i></span>
-                                      <input type='text' class='form-control' name='Adresse Départ' placeholder='Adresse départ' />
-                    </div>
-            </div>
-
-        </div>
-    <div class="col-md-4">
-              <div class='form-group'>
-                  <div class="input-group margin-bottom-sm">
-                              <span class="input-group-addon"><i class="fa fa-map-marker fa"></i></span>
-                                      <input type='text' class='form-control' name='Adresse arrivée' placeholder='Adresse arrivée' />
-                                            </div>
+        <div id="panel"></div>
+        <div id="map">
+            <p>Veuillez patienter pendant le chargement de la carte...</p>
         </div>
     </div>
-
-    <div class="btn-group">
-  <a class="btn btn-default" href="#"><i class="fa fa-car"></i></a>
-  <a class="btn btn-default" href="#"><i class="fa fa-bus"></i></a>
-  <a class="btn btn-default" href="#"><i class="fa fa-bicycle"></i></a>
-  <a class="btn btn-default" href="#"><i class="fa fa-male"></i></a>  
-</div>
-
-</body>
-
-
-{% endblock %}
+    
+    <!-- Include Javascript -->
+    <script type="text/javascript" src="/static/js/jquery.min.js"></script>
+    <script type="text/javascript" src="/static/js/jquery-ui-1.8.12.custom.min.js"></script>
+    <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false&language=fr"></script>
+    <script type="text/javascript" src="/static/js/functions.js"></script>
+  </body>
+</html>
