--- a/static/templates/navbar.html
+++ b/static/templates/navbar.html
@@ -62,7 +62,7 @@
             {% else %}
             <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-        <li><a href='{% url "geodjango" %}'>Trajets <span class="sr-only">(current)</span></a></li>
+        <li><a href='{% url "trajets" %}'>Trajets <span class="sr-only">(current)</span></a></li>
       </ul>
       
         </div>
