--- a/static/templates/trajets.html
+++ b/static/templates/trajets.html
@@ -46,9 +46,25 @@
     <!-- Include Javascript -->
     <script type="text/javascript" src="/static/js/jquery.min.js"></script>
     <script type="text/javascript" src="/static/js/jquery-ui-1.8.12.custom.min.js"></script>
-    <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false&language=fr"></script>
+    <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false&libraries=places&language=fr"></script>
     <script type="text/javascript" src="/static/js/functions.js"></script>
-      
+    <script type="text/javascript">
+        google.maps.event.addDomListener(window, 'load', function () {
+            var places = new google.maps.places.Autocomplete(document.getElementById('origin'));
+            google.maps.event.addListener(places, 'place_changed', function () {
+
+            });
+        });
+    </script>
+    <script type="text/javascript">
+        google.maps.event.addDomListener(window, 'load', function () {
+            var places = new google.maps.places.Autocomplete(document.getElementById('destination'));
+            google.maps.event.addListener(places, 'place_changed', function () {
+
+            });
+        });
+    </script>      
+
   </body>
 </html>
 {% endblock %}
