--- a/static/templates/trajets.html
+++ b/static/templates/trajets.html
@@ -37,33 +37,21 @@
                 <input type="text" name="destination" class="form-control" id="destination" placeholder="Arrivée">
                 <button class="btn btn-lg btn-primary btn-block" type="button" value="Calculer l'itinéraire" onclick="javascript:calculate()">Rechercher</button>
                 <div class="btn-group">
-                      <a class="btn btn-default" type="button" onclick="calcRoute('DRIVING');"><i class="fa fa-car"></i></a>
-                      <a class="btn btn-default" type="button" onclick="calcRoute('WALKING');"><i class="fa fa-male"></i></a>
-                      <a class="btn btn-default" type="button" onclick="calcRoute('TRANSIT');"><i class="fa fa-bus"></i></a>
-                      <a class="btn btn-default" type="button" onclick="calcRoute('BICYCLING');"><i class="fa fa-bicycle"></i></a>
-                
+<div>
+    <select id="mode" onchange="javascript:calculate()" class="form-control">
+      <option value="DRIVING">Voiture</option>
+      <option value="WALKING">Piéton</option>
+      <option value="BICYCLING">Vélo</option>
+      <option value="TRANSIT">Métro</option>
+    </select>
+</div>
                 </div>
-                <form id="mode">
-	<input type="button" onclick="calcRoute();" value="DRIVING">
-	<input type="button" onclick="calcRoute();" value="WALKING">
-</form>
             </form>
         </div>
             </div>
         <div class="col-md-4 text-center">
         <div id="panel"></div>
         </div>
-        
-<div>
-    <b>Mode of Travel: </b>
-    <select id="mode" onchange="calcRoute();">
-      <option value="DRIVING">Driving</option>
-      <option value="WALKING">Walking</option>
-      <option value="BICYCLING">Bicycling</option>
-      <option value="TRANSIT">Transit</option>
-    </select>
-    </div>
-
     </div>
     
     <!-- Include Javascript -->
@@ -86,7 +74,7 @@
 
             });
         });
-    </script>      
+    </script>
 
   </body>
 </html>
