--- a/static/templates/registration/logout.html
+++ b/static/templates/registration/logout.html
@@ -15,7 +15,7 @@
         <!-- <p><a class="btn btn-primary btn-lg" href="#" role="button">En savoir plus &raquo;</a></p> -->
       </div>
           <div class='col-sm-6'>
-              <iframe width="560" height="315" src="https://www.youtube.com/embed/-jBfb33_KHU" frameborder="0" allowfullscreen></iframe>
+              <iframe width="560" height="315" src="https://www.youtube.com/embed/mMfxI3r_LyA" frameborder="0" allowfullscreen></iframe>
           </div>
           </div>
     </div>
