--- a/static/templates/base.html
+++ b/static/templates/base.html
@@ -54,7 +54,10 @@
       
 {% block geodjango %}
 {% endblock %}
-
+      
+{% block about %}
+{% endblock %}
+      
 {% block trajets %}
 {% endblock %}
     <div class="container">
@@ -81,7 +84,7 @@
 
 
       <footer>
-        <p>&copy; Copyright HurryUp! Tous droits réservés.</p>
+        <p>Copyright &copy; HurryUp! 2015</p>
       </footer>
     </div> <!-- /container -->
 
