--- a/static/templates/signup.html
+++ b/static/templates/signup.html
@@ -9,11 +9,11 @@
       <div class="container">
           <div class='col-sm-6'>
         <h1>Le temps vous appartient</h1>
-        <p>HurryUp! est l'unique platforme qui vous garantie d'être toujours à l'heure à vos rendez-vous.</p>
-        <!-- <p><a class="btn btn-primary btn-lg" href="#" role="button">En savoir plus &raquo;</a></p> -->
+        <p>HurryUp! est l'unique plateforme qui vous garantit d'être toujours à l'heure à vos rendez-vous.</p>
+        <p><a class="btn btn-primary btn-lg" href="about" role="button">En savoir plus &raquo;</a></p>
       </div>
           <div class='col-sm-6'>
-              <iframe width="560" height="315" src="https://www.youtube.com/embed/mMfxI3r_LyA" frameborder="0" allowfullscreen></iframe>
+              <iframe width="560" height="315" src="https://www.youtube.com/embed/-jBfb33_KHU" frameborder="0" allowfullscreen></iframe>
           </div>
           </div>
     </div>
@@ -30,7 +30,7 @@
 </span>
 
    <h2>Trajets</h2>
-          <p>Choississez un lieu de départ,votre destination et une heure d'arrivée précise, et Hurry Up! se chargera d'assurer votre ponctualité vis-à-vis de votre employeur! </p>
+          <p>Choisissez un lieu de départ, votre destination et une heure d'arrivée précise, et Hurry Up! se chargera d'assurer votre ponctualité !</p>
     
           <!-- <p><a class="btn btn-default" href="#" role="button">En savoir plus &raquo;</a></p> --> 
         </div>
@@ -42,7 +42,7 @@
 </span>
 
           <h2>Retard</h2>
-          <p>Avec Hurry Up! changez vos habitudes : partez à l'heure et arrivez à l'heure, les retards ne feront plus partie de votre quotidien! </p>
+          <p>Avec Hurry Up! changez vos habitudes : partez à l'heure et arrivez à l'heure, les retards ne feront plus partie de votre quotidien !</p>
           <!-- <p><a class="btn btn-default" href="#" role="button">En savoir plus &raquo;</a></p> --> 
        </div>
         <div class="col-md-4 text-center">
@@ -51,8 +51,8 @@
   <i class="fa fa-circle fa-stack-2x" ></i>
   <i class="fa fa-cloud-download fa-stack-1x fa-inverse"></i>
 </span>
-          <h2>Révolution</h2>
-          <p>En mêlant système de réveil et itinéraires en ligne, Hurry Up! est le premier logiciel vous permettant de n'avoir qu'un seul appareil à régler le matin!</p>
+          <h2>Multi-plateforme</h2>
+            <p>HurryUp! est compatible sur un large choix de navigateurs internet mais aussi sur smartphones et tablettes !</p>
           <!-- <p><a class="btn btn-default" href="#" role="button">En savoir plus &raquo;</a></p> --> 
         </div>
 
